--- a/tools/testing/memblock/scripts/Makefile.include
+++ b/tools/testing/memblock/scripts/Makefile.include
@@ -11,7 +11,9 @@ ifeq ($(MOVABLE_NODE), 1)
 	CFLAGS += -D MOVABLE_NODE
 endif
 
-# Use 32 bit physical addresses
+# Use 32 bit physical addresses.
+# Remember to install 32-bit version of dependencies.
 ifeq ($(32BIT_PHYS_ADDR_T), 1)
-	CFLAGS += -U CONFIG_PHYS_ADDR_T_64BIT
+	CFLAGS += -m32 -U CONFIG_PHYS_ADDR_T_64BIT
+	LDFLAGS += -m32
 endif
